# rust-proc-ctrld

./: .gitignore  README.md  arborescence.txt  server_bind.sh
Tests/: serialization.py  test_demon.py
Tests/demon/: InotifyPathUpdated.py  ProcessTerminated.py  SocketWatchTerminated.py  SurveillanceEvent.py
Testss/: serialization.py  test_demon.py
Testss/demon/: EstablishUnixConnection.py  RunCommand.py  Surveillance.py
c/: Makefile  README.txt  daemon-core  daemon-core.c  demon.fbs  demon_builder.h  demon_reader.h  demon_verifier.h  erreur.fbs  erreur_builder.h  erreur_reader.h  erreur_verifier.h  fichier_test.fb  main  main.c  meson.build
c/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  daemon  daemon_trace.txt  regression_tests
c/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
c/builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
c/daemon-features/: Detect_socket.c  Errors.c  Netlink_notif  Netlink_notifications.c  Network.c  Start_AF_UNIX  Start_socket_AF_INET.c  Start_socket_AF_UNIX.c  clone.c  detect  events.c  foo  group_manager.c  inotify  poll  process_manager.c  serialize.cpp  serialize_wrapper.cpp
c/deamon-features/: Errors.c  Start_AF_Inet  clone.c  epoll  epoll.c  events.c  group_manager.c  healthcheck.c  poll.c
c/include/: Detect_socket.h  Errors.h  Network.h  Network_BACKUP_1530.h  Network_LOCAL_1530.h  clone.h  data_structs.h  demon_builder.h  demon_generated.h  demon_reader.h  demon_verifier.h  events.h  group_manager.h  healthcheck.h  process_manager.h  serialize.h  serialize_c.h
c/src/: Detect_TCPsocket.c  Detect_socket  Detect_socket.c  clone  clone.c  detect_tcpsocket  epoll.c  foo.c  inotify  inotify.c  start_socket
c/test/: Performance_test  Performance_test.c  Regression_test.c
ebpf/: Cargo.toml
flatbuffer/: demon.fbs
home/telmo/Bureau/: Bureau
rendu/: rendu_final.aux  rendu_final.fdb_latexmk  rendu_final.fls  rendu_final.tex  rendu_final.toc
rust/: Cargo.toml
rust/serialisation_rust/: Cargo.toml  README.txt  fichier_test  fichier_test.fb
rust/serialisation_rust/src/: erreur_generated.rs  main.rs
rust/serialise_rust_to_c/: CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  cmake_install.cmake  monster.fbs
rust/serialise_rust_to_c/src/: main.rs  monster_generated.rs
rust/src/: lib.rs  logger.rs  main.rs  network.rs  process.rs  prototype.rs
rust/src/monitoring_tools/: Start_TCP_socket.rs  TCP_socket.rs  clone  clone.rs  command.rs  epoll.rs  foo  foo.rs  inotify.rs  inotify_tool.rs  mod.rs  network.rs  poll.rs  signal_tool.rs  socket.rs  start_tcp_socket.rs  tcp_socket.rs  test_clone.rs
rust/src/proto/: demon.fbs  demon.rs  demon_generated.rs  main.rs  mod.rs  proto_client.rs  serialisation.rs
rust/tests/: test.rs  test_clone.rs  test_inotify.rs  test_poll.rs  test_signal.rs  test_signal_select.rs  test_socketfd.rs  tests_integration.rs
tests/: C_Perf_benchmark.c  demon.fbs  deserialisation.py  main.py  serialisation_python.py  test_demon.py
tests/demon/: ChildCreationError.py  Event.py  RunCommand.py  TCPSocketListening.py
tests_python/: C_benchmark  C_perf_benchmark.c  donnees.csv  generate_overhead_graph.py  schema_performance.py  serialization.py  test_demon.py  test_overhead.py
tests_python/demon/: EstablishTCPConnection.py  Event.py  ExecveTerminated.py  Inotify.py  InotifyEvent.py  InotifyWatchListUpdated.py  KillProcess.py  Message.py  ProcessLaunched.py  SocketState.py  SocketWatched.py  TCPSocket.py
