[package]
name = "rust_proc_ctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
daemonize = "0.5"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process", "fs", "ptrace", "socket", "event"] }
colored = "3.0"
inotify = "0.11.0"
mio = "1.0.3"
netstat2 = "0.11.1"
ctrlc = "3.4"
signal-hook = "=0.3.17"
crossbeam-channel = "0.5"
port_scanner = "0.1.5"
flatbuffers = "25.2.10"

[lib]
name = "rust_proc_ctrl"
path = "src/lib.rs"

# binaire principal
[[bin]]
name = "run_demon"
path = "src/bin/main.rs"

# binaire pour le client
[[bin]]
name = "run_client"
path = "src/bin/proto_client.rs"